# SoftIBLRenderer

./: .editorconfig  .gitignore  CMakeLists.txt  README.MD  config.hpp.in
scenes/cerberus/: cerberus_scene.json
scenes/chest/: chest_scene.json  multi-chest_scene.json
scenes/statue/: multi-statue_scene.json  statue_scene.json
src/: buffer.cpp  buffer.hpp  camera.hpp  common.hpp  config.hpp  displayer.cpp  displayer.hpp  engine.cpp  engine.hpp  geometry.hpp  hierarchical_zbuffer.cpp  input.cpp  input.hpp  light.hpp  logger.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  parallel.cpp  parallel.hpp  rasterizer.cpp  rasterizer.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shader.hpp  texture.hpp  util.hpp  zbuffer.cpp  zbuffer.hpp
